# animal-shelter-ai-model

./: .pre-commit-config.yaml  pyproject.toml
data/: test.csv
notebooks/oop/object-oriented-scikit-learn/: 02_Custom_Transformer.ipynb  OO Scikit-learn.pptx
src/animal_shelter/: DataEnhancer.py  DataEnhancerOLD.py  FileLoader.py  __main__.py  data_loader.py  features.py  main.py  paths.py
src/animal_shelter/feature/: default_features.py  enhancer.py
src/animal_shelter/helper/: data_loader.py
src/animal_shelter/model/: default_features.py  domain.py  predict.py  train.py
test/animal_shelter/: test_data_loader.py  test_features.py
test/animal_shelter/model/: test_train.py
