[tool.poetry]
name = "carvo-prml"
version = "0.1.0"
description = "Carvo Prodready ML"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "animal_shelter", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
fastapi = "^0.115.2"
mypy = "^1.12.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ruff = "^0.6.9"
pre-commit = "^4.0.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ['notebooks']

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)5s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
#testpaths = [
#    "test",
#    "tests",
#    "integration",
#]
